# weather-service

./: .gitignore  .mypy.ini  README.md  docker-compose.yaml  prometheus.yml  pyproject.toml
.github/workflows/: build-api.yaml  build-image-manager.yaml  build-metrics-export.yaml  check.yaml  gate.yaml  post-run.yaml
app/: main.py
app/api/v1/: routes.py  schemas.py
app/services/: redis.py  weather_services.py
consumer/: Dockerfile.flower  Dockerfile.worker  celery_consumer.py
docker/: Dockerfile
exporter/: Dockerfile  exporter_services.py  metrics_exporter.py
