[project]
name = "weather-service"
version = "0.1.0"
description = "A FastAPI-based microservice that retrieves the current temperature for a given city using real-time weather data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.2",
    "uvicorn>=0.35.0",
]
